fix: spacing and links to match design

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,9 +3,22 @@
 @use '../../styles/mixins.module' as localMixins;
 
 .root {
-  background-color: colors.getColor(primary-700);
+  background-color: rgba(0, 0, 0, 0);
   padding: 3.25rem 1.5rem 1.75rem;
   position: relative;
+}
+
+.ht6 {
+  text-transform: uppercase;
+  color: #F3F6F6;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  margin: 0;
+}
+
+.footerbg {
+  width: 100%;
 }
 
 .text {
@@ -19,7 +32,7 @@
 
 .link {
   color: colors.getColor(copy-light);
-  display: block;
+  display: block; 
 }
 
 .linkItem {
@@ -44,10 +57,6 @@
   align-items: center;
   flex-wrap: wrap;
   display: flex;
-
-  & > * {
-    margin-bottom: 1rem;
-  }
 }
 
 .floatingBtn {
